# plushie-elixir

./: .credo.exs  .dialyzer_ignore.exs  .formatter.exs  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  justfile  mise.toml  mix.exs
.github/workflows/: ci.yml  release.yml  test.yml
docs/: README.md  accessibility.md  app-behaviour.md  architecture.md  audit-iced-parity.md  by-design.md  charter.md  commands.md  composition-patterns.md  dev-mode.md  developer-experience.md  dsl-internals.md  effects.md  event-types.md  events.md  extension-dogfood-log.md  extensions.md  getting-started.md  iced-parity.md  known-issues.md  layout.md  multi-window.md  renderer.md  roadmap.md  running.md  scoped-ids.md  state-helpers.md  stateful-widgets.md  testing-caveats.md  testing-internals.md  testing.md  theming.md  transport.md  tutorial.md  ui-trees.md  upstream-issues.md  versioning.md  widget-authoring.md  widget-packages.md  widgets.md
docs/decisions/: 0001-clean-break-from-icing.md  0002-elixir-first-process-model.md  0003-jsonl-over-stdio-transport.md  0004-interactive-canvas.md  0005-pane-grid-stateful-widget.md  0006-responsive-via-sensor.md  0007-custom-widget-extension.md  0008-test-framework-architecture.md  0009-style-maps.md  0010-canvas-drawing-primitives.md  0011-composition-patterns.md  0012-widget-extension-architecture.md  0013-accessibility-via-vendored-iced-winit.md  0014-renderer-repo-split.md  0015-iced-native-accessibility.md
docs/guides/: 01-introduction.md  02-getting-started.md  03-your-first-app.md  04-the-development-loop.md  05-events.md  06-lists-and-inputs.md  07-layout.md  08-styling.md  09-animation.md  09-subscriptions.md  10-async-and-effects.md  10-subscriptions.md  11-async-and-effects.md  11-canvas.md  12-canvas.md  12-custom-widgets.md  13-custom-widgets.md  13-state-management.md  14-state-management.md  14-testing.md  15-testing.md  15-tooling-and-deployment.md  16-shared-state.md  16-tooling-and-deployment.md  17-wasm-deployment.md
docs/reference/: accessibility.md  animation.md  app-lifecycle.md  built-in-widgets.md  canvas.md  commands.md  composition-patterns.md  configuration.md  custom-canvas-elements.md  custom-types.md  custom-widgets.md  dsl.md  events.md  mix-tasks.md  packaging-and-distribution.md  patterns.md  scoped-ids.md  subscriptions.md  testing.md  themes-and-styling.md  types.md  windows-and-layout.md  wire-protocol.md
docs/stewardship/: README.md  concurrency-shape.md  dsl-discipline.md  elm-invariants.md  goals-and-non-goals.md  macro-dsl.md  otp-shape.md  (+7 more)
examples/: README.md  async_fetch.ex  catalog.ex  clock.ex  color_picker.ex  counter.ex  gallery.ex  notes.ex  rate_plushie.ex  shortcuts.ex  todo.ex
lib/: julep.ex  plushie.ex  toddy.ex
native/julep_gui/: Cargo.toml
native/julep_gui/julep-bin/: Cargo.toml
native/julep_gui/julep-bin/src/: headless.rs  main.rs  renderer.rs
native/julep_gui/julep-core/: Cargo.toml
native/julep_gui/julep-core/src/: accessibility.rs  app.rs  codec.rs  effects.rs  engine.rs  extensions.rs  image_registry.rs  lib.rs  prelude.rs  prop_helpers.rs  protocol.rs  testing.rs  widgets.rs
native/julep_gui/src/: codec.rs  effects.rs  headless.rs  image_registry.rs  julep_core.rs  main.rs  overlay_widget.rs  protocol.rs  test_mode.rs  theming.rs  tree.rs  widgets.rs
test/: test_helper.exs
(+1193 files in other folders)
