[package]
name = "julep_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "julep_gui"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image", "svg", "markdown", "canvas"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = { version = "0.15", optional = true }
arboard = { version = "3", optional = true }
notify-rust = { version = "4", optional = true }

[features]
default = ["dialogs", "clipboard", "notifications"]
dialogs = ["rfd"]
clipboard = ["arboard"]
notifications = ["notify-rust"]
