[package]
name = "julep_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "julep_gui"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image", "svg", "markdown", "canvas", "highlighter", "sysinfo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
log = "0.4"
env_logger = "0.11"
rfd = { version = "0.15", optional = true }
arboard = { version = "3", optional = true }
notify-rust = { version = "4", optional = true }
iced_test = { version = "0.14", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }

[features]
default = ["dialogs", "clipboard", "notifications"]
dialogs = ["rfd"]
clipboard = ["arboard"]
notifications = ["notify-rust"]
headless = ["iced_test", "sha2"]
test-mode = ["sha2"]
