[workspace]
members = ["julep-core", "julep-bin"]
resolver = "2"

# iced_winit is vendored in a separate repository (~/projects/iced_winit)
# with an `a11y` feature flag for accesskit integration.
# For local development, create .cargo/config.toml with:
#   [patch.crates-io]
#   iced_winit = { path = "/path/to/iced_winit" }
# For CI/production, this will be a git reference once the repo is hosted.
